--- a/menu/sobre/sobre.css
+++ b/menu/sobre/sobre.css
@@ -118,3 +118,13 @@ footer {
     display: block;
   }
 }
+
+/* Destacar página atual na barra/menu */
+.menu ul li a.active {
+  background: white;
+  border-radius:6px;
+  color: #063261;
+  padding: 8px 8px;  /* aumenta o espaço interno */
+  font-size: 18px;     /* aumenta o tamanho do texto */
+  font-weight: bold;   /* deixa mais destacado */
+}
