--- a/style.css
+++ b/style.css
@@ -160,3 +160,8 @@ header {
   font-size: 18px;     /* aumenta o tamanho do texto */
   font-weight: bold;   /* deixa mais destacado */
 }
+
+.iconPole {
+  position: absolute;
+  left: 0;
+}
